#112 App Intent & Shortcuts for quickly accessing Sensors

--- a/Sensor-App/Resources/ReleaseNotes.xcstrings
+++ b/Sensor-App/Resources/ReleaseNotes.xcstrings
@@ -66,6 +66,71 @@
         }
       }
     },
+    "Integration into Siri & Shortcuts" : {
+      "comment" : "A list of features added in version 6.0.0 of the app.",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integrace do Siri a Zkratek"
+          }
+        },
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integration in Siri & Kurzbefehle"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integration into Siri & Shortcuts"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integración en Siri y Accesos directos"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Intégration à Siri et Raccourcis"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integrazione con Siri e Comandi"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Siriおよびショートカットへの統合"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Siri 및 단축어 통합"
+          }
+        },
+        "pt-PT" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Integração com Siri & Atalhos"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "集成到Siri和快捷指令"
+          }
+        }
+      }
+    },
     "Performance improvements an bug fixes" : {
       "comment" : "A list of improvements and bug fixes in version 6.0.0 of the app.",
       "localizations" : {
